<resources>
    <string name="app_name">Lost and Found</string>
    <string name="Name">Full Name</string>
    <string name="action_sign_in_short">Register</string>
    <string name="spinner_title">category</string>
    <string name="spinner_title2">type</string>
    <string name="email">Email</string>
    <string name="productname">Item Name</string>
    <string name="Addtitle">Create Post:</string>
    <string name="productdesc">Item Description</string>
    <string name="minimum_password">Password too short, enter minimum 8 characters!</string>
    <string name="auth_failed">Authentication failed, check your email and password or sign up</string>
    <string name="change_email">Change Email</string>
    <string name="change_password">Change Password</string>
    <string name="send_password_reset_email">Send Password reset email</string>
    <string name="remove_user">Remove user</string>
    <string name="new_pass">New Password</string>
    <string name="Contacts">CONTACTS:</string>
    <string name="title_activity_profile">Lost and found</string>
    <string name="title_activity_login">Sign in</string>
    <string name="hint_email">Email</string>
    <string name="hint_productname">Item Name</string>
    <string name="hint_search">Search</string>
    <string name="hint_productdesc">Enter a brief item description</string>
    <string name="hint_password">Password</string>
    <string name="hint_name">Fullname</string>
    <string name="btn_login">LOGIN</string>
    <string name="btn_claim">claim</string>
    <string name="btn_link_to_register">Not a member? Get registered in Lost and Found now!</string>
    <string name="btn_link_to_login">Already registered. Login! </string>
    <string name="title_activity_reset_password">ResetPasswordActivity</string>
    <string name="btn_forgot_password">Forgot your password?</string>
    <string name="btn_upload">Post</string>
    <string name="btn_post">Post</string>
    <string name="btn_reset_password">Reset Password</string>
    <string name="btn_back"><![CDATA[<< Back]]></string>
    <string name="hint_new_email">New Email</string>
    <string name="btn_change">Change</string>
    <string name="btn_send">Send</string>
    <string name="action_search">Search</string>
    <string name="action_settings">Settings</string>
    <string name="btn_remove">Remove</string>
    <string name="btn_sign_out">Sign Out</string>
    <string name="lbl_forgot_password">Forgot password?</string>
    <string name="forgot_password_msg">We just need your registered Email Id to sent you password reset instructions.</string>
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>

    <string name="nav_item_lost">Lost</string>
    <string name="nav_item_found">Found</string>
    <string name="nav_item_missing">Missing</string>
    <string name="nav_item_wanted">Wanted</string>

    <!-- navigation drawer item labels  -->
    <string-array name="nav_drawer_labels">
        <item>@string/nav_item_lost</item>
        <item>@string/nav_item_found</item>
        <item>@string/nav_item_missing</item>
        <item>@string/nav_item_wanted</item>
    </string-array>

    <string name="title_lost">LOST</string>
    <string name="title_found">FOUND</string>
    <string name="title_missing">MISSING</string>
    <string name="title_wanted">WANTED</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
