<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_add"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="info.lostandfound.firebase.AddActivity">



    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:background="@color/colorPrimary"
        android:orientation="vertical">

        <TextView
            android:id="@+id/Title"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/Addtitle"
            android:textSize="10pt">

        </TextView>

        <TextView
            android:id="@+id/Name"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dip"
            android:text="Item Name:"
            android:textSize="5pt"
            android:layout_marginBottom="5dp"/>
        <EditText
            android:id="@+id/productname"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_productname"
            android:inputType="text"
            android:textColor="@android:color/white"
            android:textColorHint="@android:color/white">

        </EditText>

        <TextView
            android:id="@+id/Description"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dip"
            android:text="Item description:"
            android:textSize="5pt"
            android:layout_marginBottom="5dp"/>


        <EditText
            android:id="@+id/productdesc"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_productdesc"
            android:inputType="textMultiLine"
            android:lines="5"
            android:textColor="@android:color/white"
            android:textColorHint="@android:color/white">

        </EditText>

        <Button
            android:id="@+id/btn_choose"
            android:layout_width="wrap_content"
            android:layout_height="25dp"
            android:background="@color/colorAccent"
            android:text="Upload your Image"
            android:textColor="@android:color/black">

        </Button>


        <ImageView
            android:id="@+id/imageView"
            android:layout_width="300dp"
            android:layout_height="15dp"
            android:layout_gravity="center_horizontal"
            android:layout_weight="1.91"
            android:adjustViewBounds="true"
            android:scaleType="centerInside">

        </ImageView>


        <LinearLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:orientation="vertical"
            android:padding="10dip"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dip"
                android:text="Category:"
                android:layout_marginBottom="5dp"/>

            <Spinner
                android:id="@+id/vspinner"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:prompt="@string/spinner_title"/>

        </LinearLayout>


        <Button
            android:id="@+id/btn_upload"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:layout_margin="@dimen/fab_margin"
            android:background="@color/colorAccent"
            android:text="@string/btn_upload"
            android:textAppearance="@style/TextAppearance.AppCompat">

        </Button>


    </LinearLayout>





</RelativeLayout>







